node/orchestra/tests/ui/err-03-subsys-twice.stderr
error: Duplicate subsystem names `AwesomeSubSys`
  --> $DIR/err-03-subsys-twice.rs:25:8
   |
25 |     sub1: AwesomeSubSys,
   |           ^^^^^^^^^^^^^

error: previously defined here.
  --> $DIR/err-03-subsys-twice.rs:22:8
   |
22 |     sub0: AwesomeSubSys,
   |           ^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `Orchestra`
  --> $DIR/err-03-subsys-twice.rs:34:17
   |
34 |     let orchestra = Orchestra::<_,_>::builder()
   |                    ^^^^^^^^ use of undeclared type `Orchestra`
